--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "docx": "^9.1.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "html2canvas": "^1.4.1",
@@ -60,6 +62,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
